fix: search field icon misaligned

--- a/less/common.less
+++ b/less/common.less
@@ -1,3 +1,4 @@
 .Search-input:before {
   .fas();
+  line-height: inherit;
 }
